# BCar

./: .gitignore  README.md  pyproject.toml
bc_django/: article.json  auth.json  auth_user.json  cardata.json  data.json  manage.py  package-lock.json
bc_django/article/: admin.py  models.py
bc_django/article/migrations/: 0001_initial.py  0002_delete_article_delete_articlecategory.py  0002_initial.py  0003_initial.py
bc_django/bc_django/: asgi.py  settings.py  settings.py.bak  urls.py  wsgi.py
bc_django/car/: admin.py  asgi.py  models.py  permissions.py  serializers.py  settings.py.bak  urls.py  views.py  wsgi.py
bc_django/car/migrations/: 0001_initial.py  0002_car_is_active.py  0003_remove_car_is_active_alter_car_id.py  0004_car_latitude_car_longitude_alter_car_id.py  0005_alter_car_photo.py  0006_alter_car_photo.py
bc_django/frontend/: package-lock.json  package.json
bc_django/frontend/public/: index.html
bc_django/frontend/src/: App.js  carData.js  index.css  index.js
bc_django/main/: urls.py  views.py
bc_django/user/: adapter.py  admin.py  forms.py  forms.py.bak  models.py  perms.py  serializers.py  tokens.py  urls.py  views.py
bc_django/user/migrations/: 0001_initial.py  0002_alter_customuser_driving_licence.py  0002_alter_drivinglicence_date_of_completion_and_more.py  0002_maintain_order_review.py  0002_order_order_price_alter_order_date_creation.py  0003_alter_customuser_is_active_and_more.py  0003_alter_customuser_phone.py  0003_remove_customuser_photo.py  0004_alter_customuser_date_joined_and_more.py  0004_alter_customuser_username.py  (+15 more)
(+83 files in other folders)
